# gnode

./: .gitignore  CMakeLists.txt  README.md  givens.h  gram_schmidt.h  householder.h  jacobi.h  linalg_exceptions.h  literalhelper.py  lu_decomp.h  main.cpp  mat_mul.hpp  matrix.h  matrix.hpp  matrix_iterators.h  pivot.h  products.h  result.h  stats.h  tdpool.hpp
include/: engine.h  givens.h  gram_schmidt.h  householder.h  jacobi.h  linalg_exceptions.h  lu_decomp.h  matrix.h  permutation.h  products.h  result.h  stats.h  tdpool.h
include/core/: allocator_support.h  const_conjugate_view_engine.h  const_negation_view_engine.h  const_transparent_view_engine.h  const_transpose_view_engine.h  custom_binary_common_type.h  engine.h  guard.h  op_promotions.h  storage_engine.h  transparent_view_engine.h  transpose_view_engine.h  view_engine.h  view_funs.h
tests/: playground.cpp  test_engine.cpp  test_givens.cpp  test_gram_schmidt.cpp  test_householder.cpp  test_jacobi.cpp  test_main.cpp  test_mat.cpp  test_prods.cpp  test_stats.cpp
tests/engine_tests/: test_boxed_view_engine.cpp  test_col_view_engine.cpp  test_const_col_view_engine.cpp  test_const_conjugate_view_engine.cpp  test_const_negation_view_engine.cpp  test_const_row_view_engine.cpp  test_const_transparent_view_engine.cpp  test_const_transpose_view_engine.cpp  test_engine.cpp  test_expand_view.cpp  test_export_box_view.cpp  test_export_col_view.cpp  test_export_conjugate_view.cpp  test_export_negation_view.cpp  test_export_row_view.cpp  test_export_transparent_view.cpp  test_export_transpose_view.cpp  test_inner_product_view.cpp  test_inport_box_view.cpp  test_inport_boxed_view.cpp  test_inport_col_view.cpp  test_inport_row_view.cpp  test_inport_transparent_view.cpp  test_inport_transpose_view.cpp  test_row_view_engine.cpp  test_storage_engine_both_static.cpp  test_storage_engine_col_static.cpp  test_storage_engine_full_dynamic.cpp  test_view_commutators.cpp  (+7 more)
(+23 files in other folders)
